fix: skip tests for commons-test as we might not have access to remote servers for testing.

--- a/.github/workflows/build_and_push.yaml
+++ b/.github/workflows/build_and_push.yaml
@@ -108,7 +108,7 @@ jobs:
         run: mvn validate
 
       - name: Install commons-test
-        run: mvn -pl commons-test -am install
+        run: mvn -pl commons-test -am install -DskipTests
 
       - name: Update database
         run: mvn -pl datashare-db liquibase:update
