fix: use datashare_liquibase to check if psql is ready

--- a/.github/workflows/build_and_push.yaml
+++ b/.github/workflows/build_and_push.yaml
@@ -78,7 +78,7 @@ jobs:
 
       - name: Wait for PostgreSQL to be ready
         run: |
-          until PGPASSWORD=test psql -h localhost -U dstest -d datashare -c '\q'; do
+          until PGPASSWORD=test psql -h localhost -U dstest -d datashare_liquibase -c '\q'; do
             >&2 echo "Postgres is still unavailable - sleeping"
             sleep 1
           done
