fix: use datashare_liquibase to check if psql is ready

--- a/.github/workflows/build_and_push.yaml
+++ b/.github/workflows/build_and_push.yaml
@@ -85,7 +85,7 @@ jobs:
           >&2 echo "Postgres is up - executing command"
 
       - name: Run init script on PostgreSQL
-        run: PGPASSWORD=test psql -h localhost -U dstest -d datashare -a -f ./datashare-db/scr/init.sql
+        run: PGPASSWORD=test psql -h localhost -U dstest -d datashare_liquibase -a -f ./datashare-db/scr/init.sql
 
       - name: Set up JDK 11
         uses: actions/setup-java@v4
